@@ -2,6 +2,7 @@
 #
 # rfkill-applet
 # (C) 2009, 2010 Norbert Preining
+# Systray adaptions: (C) 2009 Andreas Boehler
 # Licensed under GPLv3 or any version higher
 #
 
@@ -10,13 +11,12 @@ import os
 import pygtk
 pygtk.require('2.0')
 import gtk
-import gnomeapplet
 import gobject
 import struct
 import dbus
 import fnmatch
 
-version = '0.7'
+version = '0.7dev-sysapplet'
 
 
 event_format = "IBBBB"
@@ -199,19 +199,13 @@ class RfkillAccessDevRfkill():
     if (os.write(writefd, buf) < 8):
       print "Cannot write to rfkill the full event type"
     os.close(writefd)
- 
+
 
 
 class Rfkill:
-  def __init__(self, applet, iid):
+  def __init__(self):
 
     self.configfile = os.environ.get('HOME') + '/.rfkill-applet.config'
-    self.image = '/usr/share/pixmaps/rfkill-applet.png'
-    self.imagehardoff = '/usr/share/pixmaps/rfkill-applet-hardoff.png'
-    self.icon_hardon = gtk.Image()
-    self.icon_hardon.set_from_file(self.image)
-    self.icon_hardoff = gtk.Image()
-    self.icon_hardoff.set_from_file(self.imagehardoff)
 
     self.config_names = {}
     self.config_ignore = {}
@@ -222,40 +216,14 @@ class Rfkill:
     self.rfkills_showname = []
     self.hardswitchedoff = False
 
-    self.panel_size = 24
-
-    self.applet = applet
-    self.tooltips = gtk.Tooltips()
-
     # read first the global config file, then a local one
     self.read_config('/etc/rfkill-applet.config')
     self.read_config(self.configfile)
-
-    self.ebmain = gtk.EventBox()
-    self.icon = gtk.Image()
-    self.ebmain.add(self.icon)
-    self.applet.add(self.ebmain)
-    self.ebmain.connect("button-press-event", self.click_menu)
-    applet.connect("destroy", self.cleanup)
-
-    self.menuxml="""
-    <popup name="button3">
-    <menuitem name="Item 1" verb="About" label="_About" pixtype="stock" pixname="gtk-about"/>
-    <menuitem name="Item 2" verb="Preferences" label="_Preferences" pixtype="stock" pixname="gtk-preferences"/>
-    <menuitem name="Item 3" verb="Quit" label="_Quit" pixtype="stock" pixname="gtk-quit"/>
-    </popup>
-    """
-
-    self.applet.setup_menu(self.menuxml, [ ("About",self.about_box), ("Preferences",self.prefs), ("Quit", self.cleanup) ], None)
-
 
     self.AccessO = RfkillAccess(self, self.config_ignore)
 
     self.update_all()
 
-    applet.show_all()
-    # self.load_prefs()
-  
   def update_all(self):
     self.rfkills_hard = []
     self.rfkills_soft = []
@@ -267,6 +235,7 @@ class Rfkill:
       hard, soft = self.AccessO.get_state(idx)
       if hard:
         self.hardswitchedoff = True
+        self.set_hard_switch(True)
       self.rfkills_hard.append(hard)
       self.rfkills_soft.append(soft)
       self.rfkills_name.append(name)
@@ -275,17 +244,9 @@ class Rfkill:
         self.rfkills_showname.append(self.config_names[name])
       else:
         self.rfkills_showname.append(name)
-    self.set_main_icon()
-    self.update_tooltip()
-    
-  def update_tooltip(self):
-    if (self.hardswitchedoff):
-      self.tooltips.set_tip(self.ebmain, "The devices are switched off by hardware. You have to switch the hardware switch first on!")
-    else:
-      self.tooltips.set_tip(self.ebmain, "Click for configuration of active devices")
 
   def about_box(self, event, data=None):
-    authors = ["Norbert Preining <preining at logic.at>"]
+    authors = ["Norbert Preining <preining at logic.at>", "Andreas Boehler <andy.boehler at gmx.at>"]
     about = gtk.AboutDialog()
     about.set_name("Rfkill Applet")
     about.set_version(version)
@@ -296,12 +257,14 @@ class Rfkill:
     about.run()
     about.destroy()
 
-
   def prefs(self, event, data=None):
     prefdiag = gtk.MessageDialog(buttons=gtk.BUTTONS_OK)
     prefdiag.set_property('text', "Not implemented yet!")
     prefdiag.run()
     prefdiag.destroy()
+
+  def quit_activate(self, widget):
+    gtk.main_quit()
 
   def read_config(self, file):
     try:
@@ -331,64 +294,66 @@ class Rfkill:
         else:
           print "Unknown key in config file: " + line
 
-
-  def set_main_icon(self):
-    if (self.hardswitchedoff):
-      self.icon.set_from_file(self.imagehardoff)
-    else:
-      self.icon.set_from_file(self.image)
-
-
-  def click_menu(self, widget, event):
-    if event.button == 1:
-      popmenu = gtk.Menu()
-      self.update_all()
-      if (self.hardswitchedoff):
-        return
+  def show_menu(self, widget, button, time, func, icon):
+    menu = gtk.Menu()
+    self.update_all()
+    if not self.hardswitchedoff:
       for idx,showname in enumerate(self.rfkills_showname):
-        menu_item = gtk.CheckMenuItem(label=showname)
-        menu_item.set_active(not(self.rfkills_soft[idx]))
-        menu_item.show()
-        menu_item.connect("toggled", self.toggle_rfkill, idx)
-        popmenu.append(menu_item)
-      popmenu.show()
-      popmenu.popup(None, None, None, event.button, event.time)
+        item = gtk.CheckMenuItem(label=showname)
+        item.set_active(not(self.rfkills_soft[idx]))
+        item.connect('activate', self.toggle_rfkill, idx)
+        menu.append(item)
+    else:
+      item = gtk.MenuItem(label="Check Hardware Switch")
+      item.set_sensitive(False)
+      menu.append(item)
+    item = gtk.SeparatorMenuItem()
+    menu.append(item)
+    item = gtk.ImageMenuItem(stock_id=gtk.STOCK_ABOUT)
+    item.connect('activate', self.about_box)
+    menu.append(item) 
+    item = gtk.ImageMenuItem(stock_id=gtk.STOCK_QUIT)
+    item.connect('activate', self.quit_activate)
+    menu.append(item)               
+    menu.show_all()
+    menu.popup(None, None, func, button, time, icon)
 
-
+           
   def set_hard_switch (self, newstate):
     self.hardswitchedoff = newstate
-    self.set_main_icon()
-    self.update_tooltip()
+    if not newstate:
+      icon.set_from_icon_name('rfkill-applet', gtk.ICON_SIZE_SMALL_TOOLBAR)
+      icon.set_tooltip('Change RfKill Status')
+    else:
+      icon.set_from_icon_name('rfkill-applet-hardoff', gtk.ICON_SIZE_SMALL_TOOLBAR)  
+      icon.set_tooltip('Hardware RfKill Switch is active!')
+
 
   def toggle_rfkill (self, widget, idx):
     self.AccessO.toggle_softstate(self.rfkills_idx[idx])
   
-  def cleanup(self, a, b):
-    gtk.main_quit()
-    sys.exit()
-
-
-def rfkill_factory(applet, iid):
-  Rfkill(applet, iid)
-  return True
-
 if len(sys.argv) == 2 and sys.argv[1] == '-d':   
   main_window = gtk.Window(gtk.WINDOW_TOPLEVEL)
   main_window.set_title("Rfkill Applet")
   main_window.connect("destroy", gtk.main_quit) 
-  app = gnomeapplet.Applet()
-  rfkill_factory(app, None)
-  app.reparent(main_window)
+  icon = gtk.Image()
+  icon.set_from_file('/usr/share/pixmaps/rfkill-applet.png')
+  main_button = gtk.Button()
+  main_button.set_image(icon)
+  main_window.add(main_button)
+  rfkill = Rfkill()
+  main_button.connect('clicked', rfkill.show_menu, 0, 0, None, None)
   main_window.show_all()
   gtk.main()
   sys.exit()
 
 if __name__ == '__main__':
-  print('Starting factory')
-  gnomeapplet.bonobo_factory("OAFIID:RfkillApplet_Factory", 
-                             gnomeapplet.Applet.__gtype__, 
-                             "RFKill Switch Applet", "0.1", 
-                             rfkill_factory)
+  icon = gtk.status_icon_new_from_icon_name('rfkill-applet')
+  icon.set_tooltip('RfKill')
+  rfkill = Rfkill()
+  icon.connect('popup-menu', rfkill.show_menu, gtk.status_icon_position_menu, icon)
 
+gtk.main()
+sys.exit()
 
 # vim:set tabstop=2 expandtab: #
